--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -941,10 +941,10 @@ xxx
 %  \tl_show:N \subfiglist_parsed_spec_tl \error
 %  \subfiglist_setup_file:nnn {} {1} { figures/01 }
 %  \subfiglist_setup_file:nnn {} {2} { figures/02 }
-\subfiglist_setup_file:nnn {} {1} {figures/02}
-\subfiglist_setup_file:nnn {} {2} {figures/02}
-\subfiglist_setup_file:nnn {} {3} {figures/02}
-\subfiglist_setup_file:nnn {} {4} {figures/02}
+\subfiglistfile {1} {figures/02}
+\subfiglistfile {2} {figures/02}
+\subfiglistfile {3} {figures/02}
+\subfiglistfile {4} {figures/02}
   
 %  \tl_to_str:N \subfiglist_parsed_spec_tl\\
 %  \dim_use:N\subfiglist_newline_correction_dim
