--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -941,7 +941,7 @@ xxx
 %  \tl_show:N \subfiglist_parsed_spec_tl \error
 %  \subfiglist_setup_file:nnn {} {1} { figures/01 }
 %  \subfiglist_setup_file:nnn {} {2} { figures/02 }
-\subfiglistfile {1} {figures/02}
+\subfiglistfile [t=10ex] {1} {figures/02}
 \subfiglistfile {2} {figures/02}
 \subfiglistfile {3} {figures/02}
 \subfiglistfile {4} {figures/02}
@@ -973,7 +973,7 @@ xxx
 %\subfiglist_dimension_hmode_subblock:NnV \subfiglist_dimensioned_spec_tl { 200pt } \subfiglist_parsed_spec_tl
 
 %\prop_show:N \subfiglist_canvas_prop
-%\tl_show:N \subfiglist_dimensioned_spec_tl %\error
+%\tl_show:N \subfiglist_dimensioned_spec_tl \error
 %\dim_use:N \subfiglist_line_height_dim\\
 %
 %%  \prop_show:N \subfiglist_canvas_prop \error
