Refactored macros for specification of labels

--- a/TODO
+++ b/TODO
@@ -29,6 +29,9 @@ TODO
 * Caveat: Don't use \subfiglistlineheight for anything related to width.
 * Add default value in \subfiglist_tokenize_newline
 * Check if empty separator @{} raises unwanted error
+* Verify numbers for labels and overlays
+* Option to set label hoff and voff globally. Document default values for no/colored background
+* Use \subfiglist_key_set:nnV where possible
 
 
 
