--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -941,11 +941,12 @@ xxx
 %  \tl_show:N \subfiglist_parsed_spec_tl \error
 %  \subfiglist_setup_file:nnn {} {1} { figures/01 }
 %  \subfiglist_setup_file:nnn {} {2} { figures/02 }
-\subfiglistfile [t=10ex] {1} {figures/02}
-\subfiglistfile {2} {figures/02}
-\subfiglistfile {3} {figures/02}
-\subfiglistfile {4} {figures/02}
-  
+\subfiglistfile [t=0ex] {1} {figures/04}
+\subfiglistfile {2} {figures/04}
+\subfiglistfile {3} {figures/04}
+\subfiglistfile {4} {figures/04}
+
+\subfiglistlabel [v=t,h=l,b=none] { 1 } {} 
 %  \tl_to_str:N \subfiglist_parsed_spec_tl\\
 %  \dim_use:N\subfiglist_newline_correction_dim
 %  \includegraphics{figures/01}\\[-1ex]
