--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -947,6 +947,7 @@ xxx
 \subfiglistfile {4} {figures/04}
 
 \subfiglistlabel [v=t,h=l,b=none] { 1 } {} 
+\subfiglistoverlay { 2 } { asdf }
 %  \tl_to_str:N \subfiglist_parsed_spec_tl\\
 %  \dim_use:N\subfiglist_newline_correction_dim
 %  \includegraphics{figures/01}\\[-1ex]
