Removed legacy code for specification of dummies and dummyfiles

--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -3135,104 +3135,9 @@
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%
-%%%   Package code   %%%
-%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-\cs_new:Npn \subfiglist_dummy_file_internal:nnnn #1 #2 #3 #4
-%
-% #1: optional arguments
-% #2: image number
-% #3: image path
-% #4: boolean for frame
-%
-{
-  % Check if first argument is numeric
-  \subfiglist_is_integer:nF { #2 }
-  {
-    \msg_error:nnnn { subfiglist } { missing~number } { First } { \subfiglistdummyfile }
-  }
-
-  % Check if first argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
-  {
-    \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_count_int }
-  }{
-    % Process opitonal arguments
-    \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistdummyfile }
-    \keys_set:nn { subfiglistcanvas }
-      {
-        top    = \subfiglist_canvas_top_default_tl,
-        bottom = \subfiglist_canvas_bot_default_tl,
-        left   = \subfiglist_canvas_left_default_tl,
-        right  = \subfiglist_canvas_right_default_tl
-      }
-    \keys_set:nn { subfiglistcanvas } { #1 }
-    % Save file name and image number
-    \tl_put_right:Nn \subfiglist_canvas_nums_tl       { {#2} }
-    \tl_put_right:Nn \subfiglist_dummy_file_nums_tl   { {#2} }
-    \tl_put_right:Nn \subfiglist_dummy_file_names_tl  { {#3} }
-    \tl_put_right:Nn \subfiglist_dummy_file_frame_tl  { {#4} }
-    % Save specified offsets
-    \tl_put_right:Nx \subfiglist_canvas_top_tl   { {\dim_use:N \subfiglist_canvas_top_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_bot_tl   { {\dim_use:N \subfiglist_canvas_bot_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_left_tl  { {\dim_use:N \subfiglist_canvas_left_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_right_tl { {\dim_use:N \subfiglist_canvas_right_dim} }
-  }
-}
-
-\cs_new:Npn \subfiglist_dummy_internal:nnnn #1 #2 #3 #4
-%
-% #1: optional arguments
-% #2: canvas number
-% #3: aspect ratio
-% #4: boolean for frame
-%
-{
-  % Check if first argument is numeric
-  \subfiglist_is_integer:nF { #2 }
-  {
-    \msg_error:nnnn { subfiglist } { missing~number } { First } { \subfiglistdummy }
-  }
-
-  % Check if second argument is a float
-  \subfiglist_is_float:nF { #3 }
-  {
-    \msg_error:nnnn { subfiglist } { missing~float } { Second } { \subfiglistdummy }
-  }
-
-  % Check if first argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
-  {
-    \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_count_int }
-  }{
-    % Process opitonal arguments
-    \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistdummy }
-    \keys_set:nn { subfiglistcanvas }
-      {
-        top    = \subfiglist_canvas_top_default_tl,
-        bottom = \subfiglist_canvas_bot_default_tl,
-        left   = \subfiglist_canvas_left_default_tl,
-        right  = \subfiglist_canvas_right_default_tl
-      }
-    \keys_set:nn { subfiglistcanvas } { #1 }
-    % Save file name and image number
-    \tl_put_right:Nn \subfiglist_canvas_nums_tl { {#2} }
-    \tl_put_right:Nn \subfiglist_dummy_nums_tl  { {#2} }
-    \tl_put_right:Nn \subfiglist_dummy_ratio_tl { {#3} }
-    \tl_put_right:Nn \subfiglist_dummy_frame_tl { {#4} }
-    % Save specified offsets
-    \tl_put_right:Nx \subfiglist_canvas_top_tl   { {\dim_use:N \subfiglist_canvas_top_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_bot_tl   { {\dim_use:N \subfiglist_canvas_bot_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_left_tl  { {\dim_use:N \subfiglist_canvas_left_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_right_tl { {\dim_use:N \subfiglist_canvas_right_dim} }
-  }
-}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   Document commands   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Define command to format label when caption option is not used
 \NewDocumentCommand \subfiglistlabelformat { } { (\alph{subfigure}) }
