Fixed missing space after subblock

--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -349,6 +349,7 @@ The more complicated example in \cref{lst:complicated} illustrates the usage of 
     { 4 \\ 5 6 } 7 { 8 9 \\ {10} } \\[3ex]
     {11} {12} @{\hspace*{3ex}} {13} {14}
   }
+\ExplSyntaxOn
   \subfiglistfile{1}{figures/01.png}
   \subfiglistfile{2}{figures/02.png}
   \subfiglistfile{3}{figures/03.png}
