--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -1844,6 +1844,18 @@
     \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempa_tl
   \group_end:
   \tl_put_right:NV #2 \subfiglist_tempa_tl
+  
+  \seq_get_left:NN #1 \subfiglist_tempa_tl
+  \bool_lazy_any:nF
+  {
+    { \quark_if_no_value_p:N \subfiglist_tempa_tl }
+    { \subfiglist_parse_is_separator_p:V \subfiglist_tempa_tl }
+    { \subfiglist_parse_is_newline_p:V \subfiglist_tempa_tl }
+  }{
+    \tl_clear:N \subfiglist_tempa_tl
+    \subfiglist_parse_make_token:NnV \subfiglist_tempb_tl { space } \subfiglist_tempa_tl
+    \tl_put_right:NV #2 \subfiglist_tempb_tl
+  }
 }
 
 % Parser for lines
